fixed hills on mobile

--- a/styles/_keyframes.scss
+++ b/styles/_keyframes.scss
@@ -33,7 +33,7 @@
     transform: translateY(0);
   }
   100% {
-    transform: translateY(-320px);
+    transform: translateY(-270px);
   }
 }
 
