--- a/styles/_scene.scss
+++ b/styles/_scene.scss
@@ -116,7 +116,7 @@
     .hills {
       img {
         width: 500px;
-        bottom: -300px;
+        bottom: -270px;
         left: calc(50% - 250px);
         z-index: -2;
         animation-name: hills;
